deploy/k8s/infrastructure/deploy-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-registry
  namespace: juanie
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: deploy-registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deploy-registry
    spec:
      containers:
        - name: registry
          image: registry:3.0.0
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: registry-data
              mountPath: /var/lib/registry
            - name: registry-auth
              mountPath: /auth
              readOnly: true
            - name: registry-config
              mountPath: /etc/distribution/config.yml
              subPath: config.yml
              readOnly: true
      volumes:
        - name: registry-data
          persistentVolumeClaim:
            claimName: deploy-registry-data
        - name: registry-auth
          secret:
            secretName: deploy-registry-auth
        - name: registry-config
          configMap:
            name: deploy-registry-config
