deploy/k8s/infrastructure/deploy-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-registry
  namespace: juanie
spec:
  selector:
    app.kubernetes.io/name: deploy-registry
  ports:
    - name: http
      port: 5000
      targetPort: 5000
