deploy/k8s/infrastructure/deploy-registry/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deploy-registry-route
  namespace: juanie
spec:
  parentRefs:
    - name: shared-gateway
      namespace: juanie
      sectionName: https-wildcard
  hostnames:
    - registry.juanie.art
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: deploy-registry
          port: 5000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deploy-registry-redirect
  namespace: juanie
spec:
  parentRefs:
    - name: shared-gateway
      namespace: juanie
      sectionName: http-wildcard
  hostnames:
    - registry.juanie.art
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
